# r-bpe

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  unicode_scripts.md
.github/workflows/: publish.yml
examples/: tokenizer_config.yaml
inputs/: arabic_chars_rbpe_norm.pickle
src/rbpe/: __init__.py  bpe_tokenizer_trainer.py  cli.py  data_cleaner.py  dynamic_tokenizer.py  mapping_tokenizer.py  rbpe_tokenizer.py  token_classifier.py
src/rbpe/utils/: unicode_normalizer.py
