[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rbpe"
version = "0.1.0"
description = "R-BPE: Improving BPE-Tokenizers with Token Reuse"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "transformers>=4.49.0",
    "datasets>=3.0.0",
    "pytest>=7.0.0",
    "torch>=2.4.0",
    "tqdm>=4.60.0",
    "click>=7.0"
]

[project.scripts]
rbpe = "rbpe.cli:rbpe"

[tool.uv]
package = true

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/rbpe"]
